--- a/vuet/package.json
+++ b/vuet/package.json
@@ -32,7 +32,7 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "@babel/eslint-parser",
+      "parser": "@babel/eslint-parser"
     },
     "rules": {}
   },
